--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT=4000
-MONGODB_URI=mongodb://127.0.0.1:27017/climateready
+MONGODB_URI=mongodb+srv://admin:1234@cluster0.50mnu2g.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 CLIENT_ORIGIN=http://localhost:8081
 # Optional (free token from https://huggingface.co/settings/tokens)
 HF_API_TOKEN=hf_xxx
