--- a/server/.env
+++ b/server/.env
@@ -2,4 +2,6 @@ PORT=4000
 MONGODB_URI=mongodb+srv://admin:1234@cluster0.50mnu2g.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 CLIENT_ORIGIN=http://localhost:8081
 # Optional (free token from https://huggingface.co/settings/tokens)
-HF_API_TOKEN=hf_xxx
+HUGGINGFACE_API_KEY=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
+# Optional: override model
+# HF_MODERATION_MODEL=unitary/toxic-bert
