--- a/package.json
+++ b/package.json
@@ -54,9 +54,9 @@
     "@types/react": "~19.1.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
-    "typescript": "~5.9.2",
     "lottie-react-native": "~7.3.1",
-    "react-native-reanimated": "~4.1.1"
+    "react-native-reanimated": "~4.1.1",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
